--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "",
   "license": "UNLICENSED",
   "private": true,
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/lodash": "^4.14.157",
+    "@types/lodash-es": "^4.17.3",
     "eslint": "^7.5.0",
+    "lodash-es": "^4.17.15",
     "prettier": "^2.0.5",
+    "ts-loader": "^8.0.1",
     "typescript": "^3.9.7",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "typescript-eslint": "0.0.1-alpha.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
